# horus-attendance

./: .commitmsg  .gitignore  README.md
.github/workflows/: release.yml
.kiro/specs/horus-attendance-desktop/: design.md  requirements.md  tasks.md
horus-attendance/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
horus-attendance/sidecar/: package-lock.json  package.json  test-connect.py
horus-attendance/sidecar/patches/: patch-node-zklib.js
horus-attendance/sidecar/src/: diagnose.ts  index.ts  node-zklib.d.ts  types.ts  zkteco-client.ts
horus-attendance/src/: App.tsx  index.css
horus-attendance/src-tauri/: Cargo.toml  tauri.conf.json
horus-attendance/src-tauri/capabilities/: default.json
horus-attendance/src-tauri/src/: lib.rs
horus-attendance/src-tauri/src/zkteco/: client.rs  commands.rs  mod.rs  protocol.rs  tcp.rs  types.rs  udp.rs
horus-attendance/src/components/layout/: AppShell.tsx  Sidebar.tsx  SyncProgressPanel.tsx
horus-attendance/src/components/ui/: ConfirmDialog.tsx  ErrorBoundary.tsx  ErrorScreen.tsx  LoadingScreen.tsx  Notification.tsx  index.ts
horus-attendance/src/contexts/: AppContext.tsx  SyncContext.tsx  index.ts
horus-attendance/src/lib/: database.ts  tauri-commands.ts
horus-attendance/src/pages/: DashboardPage.tsx  DepartmentsPage.tsx  NotFoundPage.tsx  RecordsPage.tsx  ReportsPage.tsx  SettingsPage.tsx  SyncPage.tsx  UserAttendancePage.tsx  UsersPage.tsx  index.ts
horus-attendance/src/types/: api.ts  index.ts  models.ts  services.ts
(+34 files in other folders)
